--- a/app/src/main/res/layout/activity_person_perfil.xml
+++ b/app/src/main/res/layout/activity_person_perfil.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <FrameLayout
@@ -123,15 +124,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:id="@+id/person_homepage"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:autoLink="web"
                     android:text="@string/homepage"
-                    android:textAppearance="@style/TextAppearance.AppCompat"
                     android:textStyle="normal|italic"
+                    tools:visibility="visible"
                     android:visibility="invisible" />
 
                 <ImageView
