--- a/app/src/main/res/layout/reset_senha.xml
+++ b/app/src/main/res/layout/reset_senha.xml
@@ -70,7 +70,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.MaterialComponents.Button.TextButton"
             android:id="@+id/bt_cancel"
             android:layout_width="wrap_content"
             android:layout_weight="0.5"
@@ -78,7 +79,8 @@
             android:padding="@dimen/trade_size_dp_3"
             android:text="@string/cancel" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:id="@+id/bt_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
