--- a/app/src/main/res/layout/tvshow_info.xml
+++ b/app/src/main/res/layout/tvshow_info.xml
@@ -194,19 +194,17 @@
                 app:layout_constraintTop_toTopOf="@+id/frame_nota" />
 
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:id="@+id/seguir"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/trade_size_dp_42"
                 android:layout_marginStart="@dimen/trade_size_dp_8"
-                android:layout_marginLeft="@dimen/trade_size_dp_8"
                 android:layout_marginEnd="@dimen/trade_size_dp_4"
-                android:layout_marginRight="@dimen/trade_size_dp_4"
                 android:layout_weight="1"
-                android:background="@drawable/button_nao_visto"
                 android:textSize="@dimen/trade_txt_size_sp_13"
-                android:theme="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                 android:visibility="visible"
+                tools:text="Seguindo"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/icon_site"
                 app:layout_constraintTop_toTopOf="@+id/icon_site" />
