--- a/app/src/main/res/layout/crews_list_adapter.xml
+++ b/app/src/main/res/layout/crews_list_adapter.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/trade_size_dp_6"
-    android:elevation="@dimen/trade_size_dp_3"
+    android:layout_marginTop="3dp"
+    android:layout_marginStart="3dp"
+    android:layout_marginEnd="3dp"
     tools:ignore="UnusedAttribute">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:minHeight="@dimen/trade_size_dp_1"
+        android:minHeight="@dimen/trade_size_dp_4"
         android:orientation="horizontal">
 
         <ImageView
@@ -24,10 +25,9 @@
             android:scaleType="centerCrop" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/trade_size_dp_10"
             android:layout_marginStart="@dimen/trade_size_dp_10"
             android:layout_weight="1"
             android:orientation="vertical">
