--- a/app/src/main/res/layout/elenco_list_adapter.xml
+++ b/app/src/main/res/layout/elenco_list_adapter.xml
@@ -2,14 +2,16 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/trade_size_dp_6"
-
+    android:layout_marginTop="3dp"
+    android:layout_marginEnd="3dp"
+    android:layout_marginStart="3dp"
     android:elevation="@dimen/trade_size_dp_3">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
+        android:minHeight="@dimen/trade_size_dp_4"
         android:orientation="horizontal">
 
         <ImageView
@@ -23,7 +25,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/trade_size_dp_10"
             android:layout_marginStart="@dimen/trade_size_dp_10"
             android:orientation="vertical">
 
