--- a/app/src/main/res/layout/filme_info.xml
+++ b/app/src/main/res/layout/filme_info.xml
@@ -69,6 +69,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:maxLines="1"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/lancamento"
         app:layout_constraintStart_toEndOf="@+id/label_produtora"
         app:layout_constraintTop_toBottomOf="@+id/categoria_filme"
