--- a/app/src/main/res/layout/produtora_layout.xml
+++ b/app/src/main/res/layout/produtora_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,13 +17,15 @@
         android:listSelector="@android:color/transparent"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
+        tools:itemCount="10"
+        tools:listitem="@layout/adapter_produtora"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <!-- Layout da app bar -->
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="229dp"
+        android:layout_height="180dp"
         android:fitsSystemWindows="false"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:elevation="0dp">
@@ -46,7 +49,8 @@
                 android:background="@color/white"
                 android:cropToPadding="true"
                 android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
+                tools:src="@drawable/empty_produtora2"
                 app:layout_collapseMode="parallax" />
 
 
