--- a/app/src/main/res/layout/adapter_produtora.xml
+++ b/app/src/main/res/layout/adapter_produtora.xml
@@ -2,11 +2,12 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/trade_size_dp_3"
-    android:layout_weight="1"
+    android:layout_margin="3dp"
+    android:minHeight="90dp"
     android:foreground="?attr/selectableItemBackground"
     app:cardCornerRadius="@dimen/trade_size_dp_2"
     app:cardElevation="@dimen/trade_size_dp_3"
@@ -14,45 +15,51 @@
     app:cardUseCompatPadding="false"
     card_view:cardElevation="0dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <FrameLayout
+        <ImageView
+            android:id="@+id/img_movie"
             android:layout_width="match_parent"
-            android:minHeight="@dimen/trade_size_dp_100"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            tools:src="@drawable/person"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
-            <ImageView
-                android:id="@+id/imgFilme_produtora"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|center_horizontal"
-                android:adjustViewBounds="true"
-                android:cropToPadding="true"
-                android:scaleType="centerCrop" />
+        <TextView
+            android:id="@+id/year_or_title"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:layout_gravity="bottom|center_horizontal"
+            android:background="@color/black_transparente"
+            android:fontFamily="sans-serif-condensed"
+            android:gravity="top|center_horizontal"
+            android:maxLines="2"
+            android:textColor="@color/white"
+            android:textSize="@dimen/trade_txt_size_sp_12"
+            android:typeface="serif"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
-            <ProgressBar
-                android:id="@+id/progress_bar"
-                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center" />
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/titleTextView_produtora"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|center_horizontal"
-                android:background="@color/black_transparente"
-                android:fontFamily="sans-serif-condensed"
-                android:gravity="top|center_horizontal"
-                android:maxLines="2"
-                android:textColor="@color/white"
-                android:textSize="@dimen/trade_txt_size_sp_12"
-                android:typeface="serif" />
-
-        </FrameLayout>
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
