--- a/app/src/main/res/layout/produtora_layout.xml
+++ b/app/src/main/res/layout/produtora_layout.xml
@@ -25,7 +25,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="wrap_content"
         android:fitsSystemWindows="false"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:elevation="0dp">
@@ -33,26 +33,24 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/primary"
             app:collapsedTitleTextAppearance="@color/blue"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
+            app:layout_scrollFlags="snap|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/top_img_produtora"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical|center_horizontal"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
                 android:adjustViewBounds="false"
-                android:background="@color/white"
+                android:background="@color/primary"
                 android:cropToPadding="true"
                 android:fitsSystemWindows="true"
-                android:scaleType="fitCenter"
+                android:scaleType="centerInside"
                 tools:src="@drawable/empty_produtora2"
                 app:layout_collapseMode="parallax" />
-
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
