--- a/app/src/main/res/layout/tvshow_info.xml
+++ b/app/src/main/res/layout/tvshow_info.xml
@@ -60,7 +60,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginEnd="@dimen/trade_size_dp_4"
-                android:layout_marginRight="@dimen/trade_size_dp_4"
                 android:gravity="end"
                 android:textStyle="normal|bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +73,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/trade_size_dp_4"
-                android:layout_marginLeft="@dimen/trade_size_dp_4"
                 android:layout_marginTop="@dimen/trade_size_dp_4"
                 android:text="@string/produtora"
                 android:textStyle="normal|italic"
@@ -149,7 +147,6 @@
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_margin="@dimen/trade_size_dp_1"
                 android:layout_marginStart="@dimen/trade_size_dp_16"
-                android:layout_marginLeft="@dimen/trade_size_dp_16"
                 android:layout_marginTop="@dimen/trade_size_dp_8"
                 app:layout_constraintStart_toEndOf="@+id/card_poster"
                 app:layout_constraintTop_toTopOf="@+id/card_poster">
@@ -185,7 +182,6 @@
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_margin="@dimen/trade_size_dp_1"
                 android:layout_marginStart="@dimen/trade_size_dp_8"
-                android:layout_marginLeft="@dimen/trade_size_dp_8"
                 android:layout_marginTop="@dimen/trade_size_dp_8"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/site"
@@ -216,7 +212,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/trade_size_dp_2"
-                android:layout_marginRight="@dimen/trade_size_dp_2"
                 app:cardCornerRadius="@dimen/trade_size_dp_2"
                 app:cardElevation="@dimen/trade_size_dp_3"
                 app:cardPreventCornerOverlap="true"
@@ -235,7 +230,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/trade_size_dp_2"
-                        android:layout_marginLeft="@dimen/trade_size_dp_2"
                         android:layout_marginTop="@dimen/trade_size_dp_4"
                         android:text="@string/original_title"
                         android:textSize="@dimen/trade_txt_size_sp_14"
@@ -264,7 +258,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/trade_size_dp_2"
-                        android:layout_marginLeft="@dimen/trade_size_dp_2"
                         android:layout_marginTop="@dimen/trade_size_dp_2"
                         android:text="@string/popularity"
                         android:textSize="@dimen/trade_txt_size_sp_14"
@@ -276,9 +269,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/trade_size_dp_8"
-                        android:layout_marginLeft="@dimen/trade_size_dp_8"
                         android:layout_marginEnd="@dimen/trade_size_dp_2"
-                        android:layout_marginRight="@dimen/trade_size_dp_2"
                         android:gravity="end"
                         android:textSize="@dimen/trade_txt_size_sp_14"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -293,7 +284,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/trade_size_dp_2"
-                        android:layout_marginLeft="@dimen/trade_size_dp_2"
                         android:text="@string/production_countries"
                         android:textSize="@dimen/trade_txt_size_sp_14"
                         app:layout_constraintStart_toStartOf="@+id/popularity_label"
@@ -304,9 +294,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/trade_size_dp_8"
-                        android:layout_marginLeft="@dimen/trade_size_dp_8"
                         android:layout_marginEnd="@dimen/trade_size_dp_2"
-                        android:layout_marginRight="@dimen/trade_size_dp_2"
                         android:gravity="end"
                         android:maxLines="1"
                         android:textSize="@dimen/trade_txt_size_sp_14"
@@ -321,7 +309,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/trade_size_dp_2"
-                        android:layout_marginLeft="@dimen/trade_size_dp_2"
                         android:layout_marginTop="@dimen/trade_size_dp_2"
                         android:text="@string/temporadas"
                         android:textSize="@dimen/trade_txt_size_sp_14"
@@ -333,7 +320,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="2dp"
-                        android:layout_marginRight="2dp"
                         android:textSize="@dimen/trade_txt_size_sp_14"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/season_label"
@@ -344,7 +330,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/trade_size_dp_2"
-                        android:layout_marginLeft="@dimen/trade_size_dp_2"
                         android:layout_marginTop="@dimen/trade_size_dp_2"
                         android:text="@string/ultimo_ep"
                         android:textSize="@dimen/trade_txt_size_sp_14"
@@ -357,9 +342,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/trade_size_dp_8"
-                        android:layout_marginLeft="@dimen/trade_size_dp_8"
                         android:layout_marginEnd="@dimen/trade_size_dp_2"
-                        android:layout_marginRight="@dimen/trade_size_dp_2"
                         android:ellipsize="end"
                         android:gravity="end"
                         android:maxLines="2"
@@ -374,7 +357,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/trade_size_dp_2"
-                        android:layout_marginLeft="@dimen/trade_size_dp_2"
                         android:layout_marginTop="@dimen/trade_size_dp_2"
                         android:layout_marginBottom="@dimen/trade_size_dp_4"
                         android:text="@string/proximo_ep"
@@ -388,7 +370,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/trade_size_dp_2"
-                        android:layout_marginRight="@dimen/trade_size_dp_2"
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:textSize="@dimen/trade_txt_size_sp_14"
@@ -407,7 +388,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/trade_size_dp_8"
-                android:layout_marginLeft="@dimen/trade_size_dp_8"
                 android:layout_marginEnd="@dimen/trade_size_dp_8"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -505,7 +485,7 @@
             <com.google.android.gms.ads.AdView
                 android:id="@+id/adView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_marginTop="@dimen/trade_size_dp_4"
                 app:adSize="BANNER"
                 app:adUnitId="@string/admob"
