--- a/app/src/main/res/layout/activity_epsodios.xml
+++ b/app/src/main/res/layout/activity_epsodios.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabGravity="center"
-        app:tabIndicatorHeight="@dimen/trade_size_dp_5"
+        app:tabIndicatorHeight="2dp"
         app:tabMode="scrollable" />
 
     <androidx.viewpager.widget.ViewPager
@@ -26,6 +26,7 @@
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="3dp"
         app:adSize="SMART_BANNER"
         app:adUnitId="@string/admob" />
 
