--- a/app/src/main/res/layout/filme_info.xml
+++ b/app/src/main/res/layout/filme_info.xml
@@ -119,7 +119,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/trade_size_dp_1"
         android:layout_marginStart="@dimen/trade_size_dp_4"
-        android:layout_marginLeft="@dimen/trade_size_dp_4"
         app:layout_constraintStart_toEndOf="@+id/card_poster"
         app:layout_constraintTop_toBottomOf="@+id/produtora">
 
@@ -395,6 +394,7 @@
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minHeight="32dp"
         android:layout_marginTop="@dimen/trade_size_dp_4"
         app:adSize="SMART_BANNER"
         app:adUnitId="@string/admob"
