--- a/app/src/main/res/layout/filme_info.xml
+++ b/app/src/main/res/layout/filme_info.xml
@@ -20,7 +20,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="DealPoll 2" />
 
-
     <TextView
         android:id="@+id/categoria_filme"
         android:layout_width="0dp"
@@ -299,7 +298,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </androidx.cardview.widget.CardView>
 
 
@@ -317,11 +315,10 @@
         android:id="@+id/recycle_filme_trailer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/trade_size_dp_8"
-        android:layout_marginLeft="@dimen/trade_size_dp_8"
-        android:layout_marginTop="@dimen/trade_size_dp_2"
-        android:layout_marginEnd="@dimen/trade_size_dp_8"
-        android:layout_marginRight="@dimen/trade_size_dp_8"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="3dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -338,6 +335,7 @@
         android:background="@color/black_transparente"
         android:focusable="true"
         android:gravity="center_horizontal"
+        android:layout_marginTop="2dp"
         android:text="@string/elenco"
         android:textColor="@color/primary_dark"
         android:textSize="@dimen/trade_txt_size_sp_18"
