--- a/app/src/main/res/layout/lista.xml
+++ b/app/src/main/res/layout/lista.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,32 +14,36 @@
     app:cardUseCompatPadding="false"
     card_view:cardElevation="0dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <FrameLayout
+        <ImageView
+            android:id="@+id/img_lista"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            android:minHeight="110dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/poster_empty"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
-            <ImageView
-                android:id="@+id/img_lista"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/imagem_filme"
-                android:cropToPadding="false"
-                android:src="@drawable/poster_empty"
-                android:scaleType="centerCrop" />
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:theme="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-            <ProgressBar
-                android:id="@+id/progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:theme="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small" />
-        </FrameLayout>
 
         <TextView
             android:id="@+id/date_oscar"
@@ -46,14 +51,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
             android:fontFamily="cursive"
-            android:layout_marginTop="@dimen/trade_size_dp_3"
             android:gravity="bottom|center_horizontal"
-            android:text="dajdnadna"
             android:textColor="@color/black"
             android:textSize="12sp"
             android:typeface="serif"
-            card_view:targetApi="jelly_bean" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_lista"
+            app:layout_constraintVertical_bias="1.0"
+            tools:text="Toolsss" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
