--- a/app/src/main/res/layout/season_layout.xml
+++ b/app/src/main/res/layout/season_layout.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/trade_size_dp_6">
+    android:layout_marginStart="3dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginEnd="3dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
@@ -15,55 +19,63 @@
         <ImageView
             android:id="@+id/image_temporada"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <LinearLayout
-            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/trade_size_dp_2"
-            android:layout_marginLeft="@dimen/trade_size_dp_8"
-            android:layout_marginRight="@dimen/trade_size_dp_2"
-            android:layout_marginStart="@dimen/trade_size_dp_8"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:minHeight="45dp"
+            android:padding="3dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/poster_empty" />
 
-            <TextView
-                android:id="@+id/temporada"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:text="@string/temporadas"
-                android:textSize="@dimen/trade_txt_size_sp_18"
-                android:textStyle="normal|bold|italic" />
+        <TextView
+            android:id="@+id/temporada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="6dp"
+            android:gravity="start"
+            android:text="@string/temporadas"
+            android:textSize="@dimen/trade_txt_size_sp_18"
+            android:textStyle="normal|bold|italic"
+            app:layout_constraintStart_toEndOf="@id/image_temporada"
+            app:layout_constraintTop_toTopOf="@id/image_temporada" />
 
-            <TextView
-                android:id="@+id/date_temporada"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/trade_size_dp_3" />
+        <TextView
+            android:id="@+id/date_temporada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="@dimen/trade_size_dp_6"
+            app:layout_constraintStart_toEndOf="@id/image_temporada"
+            app:layout_constraintTop_toBottomOf="@id/temporada"
+            tools:text="2015-12-21" />
 
-            <ImageView
-                android:id="@+id/bt_assistido"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|center_horizontal"
-                android:layout_margin="@dimen/trade_size_dp_5"
-                android:visibility="visible" />
-
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/bt_assistido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_horizontal"
+            android:layout_margin="@dimen/trade_size_dp_5"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.7"
+            app:layout_constraintStart_toEndOf="@id/date_temporada"
+            app:layout_constraintTop_toTopOf="@id/date_temporada" />
 
         <ImageButton
             android:id="@+id/popup_temporada"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|top"
             android:background="@android:color/transparent"
-            android:paddingBottom="@dimen/trade_size_dp_3"
-            android:paddingEnd="@dimen/trade_size_dp_12"
             android:paddingLeft="@dimen/trade_size_dp_12"
-            android:paddingRight="@dimen/trade_size_dp_12"
             android:paddingTop="@dimen/trade_size_dp_6"
-            android:src="@drawable/ic_toc_black_24dp" />
+            android:paddingEnd="@dimen/trade_size_dp_12"
+            android:paddingRight="@dimen/trade_size_dp_12"
+            android:paddingBottom="@dimen/trade_size_dp_3"
+            android:src="@drawable/ic_toc_black_24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
 
-    </LinearLayout>
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
