--- a/app/src/main/res/layout/lista.xml
+++ b/app/src/main/res/layout/lista.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp"
     android:foreground="?attr/selectableItemBackground"
-    app:cardCornerRadius="2dp"
+    app:cardCornerRadius="3dp"
     app:cardElevation="3dp"
-    app:cardPreventCornerOverlap="false"
-    app:cardUseCompatPadding="false"
-    card_view:cardElevation="0dp">
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,10 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:cropToPadding="false"
-            android:minHeight="110dp"
+            android:cropToPadding="true"
+            android:minHeight="100dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/poster_empty"
+            app:layout_constraintVertical_bias="0"
+            tools:src="@drawable/poster_empty"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
