--- a/app/src/main/res/layout/fragment_list_medias.xml
+++ b/app/src/main/res/layout/fragment_list_medias.xml
@@ -7,9 +7,9 @@
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="51dp"
-        app:adSize="BANNER"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:adSize="SMART_BANNER"
         app:adUnitId="@string/admob"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
